<resources>
    <string name="app_name">LocalFly</string>
    <string name="cover_placeholder">Portada del álbum</string>
    <string name="like_button">Me gusta</string>
    <string name="dislike_button">No me gusta</string>
    <string name="download_button">Descargar</string>
    <string name="song_menu">Opciones de la canción</string>
    <!-- Notificación de reproducción -->
    <string name="notification_like">Me gusta</string>
    <string name="notification_previous">Anterior</string>
    <string name="notification_play">Reproducir</string>
    <string name="notification_pause">Pausar</string>
    <string name="notification_next">Siguiente</string>
    <string name="notification_dislike">No me gusta</string>
    <string name="notification_channel_name">Reproducción de música</string>
    <string name="download_count_header">%1$d canciones descargadas</string>
    <string name="storage_info">%1$d MB - %2$d canciones</string>
    <string name="radio_live">Radio en vivo</string>
</resources>